--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </header>
     <!-- main section -->
     <main class="bg-[#F8F8F8] my-28">
-        <section class="container mx-auto flex flex-col lg:flex-row justify-between gap-6 items-start">
+        <section class="container mx-auto flex flex-col lg:flex-row justify-between gap-6 lg:items-start">
             <div class="flex-1">
                 <div>
                     <h3 class="text-black text-4xl font-semibold mb-12">Kitchenware</h3>
